alterando os arquivos de build do docker para conseguir rodar o app com react router

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,9 @@ services:
   
   cliente:
     image: nginx
-    volumes: 
-      - ./frontend:/usr/share/nginx/html
+    build:
+      context: .
+      dockerfile: "Dockerfile-front"
     ports: 
       - "8080:80"
   
